--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <!-- <img class="logo" src="{% link assets/images/logo.svg %}" alt="Logo"> -->
-  <div class="title"><a href="{{site.base_url}}">{{site.title}}</a></div>
+  <div class="title"><a href="{% link index.md %}">{{site.title}}</a></div>
   <nav>
     <ul>
       <li><a href="{% link index.md %}">Home</a></li>
