--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,3 +5,12 @@ layout: default
 {% include breadcrumbs.html %}
 <h1>{{ page.title }}</h1>
 {{ content }}
+
+<div class="page-navigation">
+  {% if page.previous.url %}
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
+</div>
