--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,5 +1,6 @@
 header {
-  max-width: 1300px;
+  width: 100%;
+  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   justify-content: flex-end;
@@ -16,7 +17,7 @@ header {
     padding-left: 0;
     margin-right: 50px;
     @media screen and (max-width: 400px) {
-      margin-left: 40px;
+      margin-left: 10px;
       margin-top: 5px;
     }
   }
@@ -29,6 +30,9 @@ header {
 .title {
   margin: auto;
   margin-left: 50px;
+  @media screen and (max-width: 400px) {
+    margin-left: 20px;
+  }
   a {
     text-decoration: none;
     color: $base;
