--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -1,8 +1,8 @@
 body {
   font-family: $font;
   font-size: 1.2rem;
-  color: $base;
-  background: #f5f2f2;
+  color: $textColor;
+  background: $base;
   @media screen and (max-width: $break) {
     font-size: 1.2rem;
   }
@@ -30,7 +30,7 @@ main {
 
 hr {
   border: none;
-  background: rgba($base, .2);
+  background: rgba($textColor, .2);
   height: 3px;
   margin: 30px 0;
 }
