--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,8 +3,10 @@ $font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Can
 
 //Palette
 
-$base: #444;
+$base: #f5f2f2;
+$textColor: #444;
 $accent: #4845DF;
-$tertiary: #6e6cdd;
+$tertiary: lighten($accent, 5%);
 
+//Structure
 $break: 600px;
