--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,10 @@ layout: default
 
 {% include breadcrumbs.html %}
 <h1>{{ page.title }}</h1>
+{% include info.html %}
 {{ content }}
 
-<div class="page-navigation">
+<div class="post-navigation">
   {% if page.previous.url %}
     <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
   {% endif %}
