--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,4 +1,5 @@
 .post-loop {
+  padding-left: 0;
   li {
     list-style: none;
   }
@@ -20,5 +21,16 @@
   @media screen and (max-width: $break) {
     margin: 15px 0;
     padding-bottom: 0;
+  }
+}
+
+.tag-cloud {
+  margin-right: 50px;
+  margin-top: 10px;
+  a {
+    display: block;
+  }
+  h3 {
+    font-size: 1.5rem;
   }
 }
