--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,5 +3,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{page.title}} | {{site.title}}</title>
-  <link rel="stylesheet" href="{% link assets/main.scss %}">
+  <link rel="stylesheet" href="{{ site.baseurl }}{% link assets/main.scss %}"
 </head>
