--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{page.title}} | {{site.title}}</title>
+  {% if page.type == 'tag_page' %}
+    <title>{{ page.tag }} | {{site.title}}</title>
+    {% else %}
+      <title>{{page.title}} | {{site.title}}</title>
+  {% endif %}
   <link rel="stylesheet" href="{{ site.baseurl }}{% link assets/main.scss %}"
 </head>
