--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header>
   <!-- <img class="logo" src="{% link assets/images/logo.svg %}" alt="Logo"> -->
-  <div class="title"><a href="{% link index.md %}">{{site.title}}</a></div>
+  <div class="title"><a href="{{ site.baseurl }}{% link index.md %}">{{site.title}}</a></div>
   <nav>
     <ul>
       {% assign menu_items = site.pages | sort: 'order' %}
       {% for p in menu_items %}
         {% if p.menu == true %}
-          <li><a href="{{ p.url }}">{{ p.title }}</a></li>
+          <li><a href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a></li>
         {% endif %}
       {% endfor %}
     </ul>
