--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -1,11 +1,12 @@
 ---
 layout: default
+type: 'tag_page'
 ---
 
-{% include breadcrumbs.html %}
+
 <h1>#{{ page.tag }}</h1>
 <ul>
 {% for post in page.posts %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})</li>
+  <li><a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})</li>
 {% endfor %}
 </ul>
