fixed relative urls. Can now use in subdirectory

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,5 +7,5 @@
     {% else %}
       <title>{{page.title}} | {{site.title}}</title>
   {% endif %}
-  <link rel="stylesheet" href="{{ site.baseurl }}{% link assets/main.scss %}"
+  <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}"
 </head>
