--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -38,3 +38,13 @@ header {
     color: $textColor;
   }
 }
+
+.active {
+  position: relative;
+  &:before {
+    content: '‥';
+    position: absolute;
+    bottom: -15px;
+    left: 45%;
+  }
+}
