--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -5,15 +5,15 @@
 {% assign previous="" %}
 <ol class="crumbs">
  {% if num_parts == "0" or num_parts == "-1" %}
-  <li><a href="{{site.baseurl}}/">{{site.title}}</a> &nbsp; </li>
+  <li><a href="{{ '/' | relative_url }}">Home</a> &nbsp; </li>
  {% else %}
-  <li><a href="{{site.baseurl}}/">Home</a> / </li>
+  <li><a href="{{ '/' | relative_url }}">Home</a> / </li>
 
   {% for unused in page.content limit:num_parts %}
    {% capture first_word %}{{ url_parts | truncatewords:1 | remove:"..."}}{% endcapture %}
    {% capture previous %}{{ previous }}/{{ first_word }}{% endcapture %}
 
-   <li><a href="{{site.baseurl}}{{previous}}">{{ first_word }}</a> </li>
+   <li><a href="{{previous | relative_url }}">{{ first_word }}</a> </li>
    {% capture url_parts %}{{ url_parts | remove_first:first_word }}{% endcapture %}
   {% endfor %}
  {% endif %}
