--- a/_includes/info.html
+++ b/_includes/info.html
@@ -1,11 +1,13 @@
 <div class="info">
   <span>{{ page.date | date_to_string }}</span>
   {% if site.enabled.tags == true %}
-  &EmptyVerySmallSquare;
-      {% if page.tags  %}
-        <span class="tags">
-          {{ page | tags }}
-        </span>
-      {% endif %}
+    &EmptyVerySmallSquare;
+    {% if page.tags %}
+      <span class="tags">
+        {% for t in page.tags %}
+          <a href="{{site.baseurl}}/tag/{{t}}">{{t}}</a>{% if forloop.last == false %},{% endif %}
+        {% endfor %}
+      </span>
     {% endif %}
+  {% endif %}
 </div>
