--- a/_includes/item.html
+++ b/_includes/item.html
@@ -1,12 +1,14 @@
 <li class="item">
     <div class="item-head">
-      <h2><a href="{{ site.baseurl }}/{{ p.url }}">{{ p.title }}</a></h2>
+      <h2><a href="{{ p.url | relative_url }}">{{ p.title }}</a></h2>
       <span>{{ p.date | date_to_string }}</span>
       {% if site.enabled.tags == true %}
       &EmptyVerySmallSquare;
           {% if p.tags  %}
             <span class="tags">
-              {{ p | tags }}
+              {% for t in p.tags %}
+                <a href="{{site.baseurl}}/tag/{{t}}">{{t}}</a>{% if forloop.last == false %},{% endif %}
+              {% endfor %}
             </span>
           {% endif %}
         {% endif %}
