--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -8,7 +8,7 @@ layout: default
 {% for post in page.posts %}
   <li>
     <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-    <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+    <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title }}</a>
   </li>
 {% endfor %}
 </ul>
