--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,14 +3,8 @@ layout: default
 ---
 
 {{ content }}
-
 <div class="flex">
-  {% if site.enabled.tags == true %}
-  <div class="tag-cloud">
-    <h3>Tags</h3>
-    {{ site | tag_cloud }}
-  </div>
-  {% endif %}
+  {% include tag-cloud.html %}
   <!-- Post Loop -->
   <ul class="post-loop">
     {% for p in site.posts %}
