--- a/_includes/info.html
+++ b/_includes/info.html
@@ -5,7 +5,7 @@
     {% if page.tags %}
       <span class="tags">
         {% for t in page.tags %}
-          <a href="{{site.baseurl}}/tag/{{t}}">{{t}}</a>{% if forloop.last == false %},{% endif %}
+          <a href="{{site.baseurl}}/tag/{{t | downcase }}">{{t}}</a>{% if forloop.last == false %},{% endif %}
         {% endfor %}
       </span>
     {% endif %}
