--- a/_includes/item.html
+++ b/_includes/item.html
@@ -7,7 +7,7 @@
           {% if p.tags  %}
             <span class="tags">
               {% for t in p.tags %}
-                <a href="{{site.baseurl}}/tag/{{t}}">{{t}}</a>{% if forloop.last == false %},{% endif %}
+                <a href="{{site.baseurl}}/tag/{{t | downcase }}">{{t}}</a>{% if forloop.last == false %},{% endif %}
               {% endfor %}
             </span>
           {% endif %}
