--- a/_includes/tag-cloud.html
+++ b/_includes/tag-cloud.html
@@ -3,7 +3,7 @@
   <h3>Tags</h3>
   {% for tag in site.tags %}
   {% comment %} Do not remove the [0]. This breaks Jekyll :( {% endcomment %}
-    <a href="{{site.baseurl}}/tag/{{tag[0]}}">{{tag[0]}}</a>
+    <a href="{{site.baseurl}}/tag/{{tag[0] | downcase }}">{{tag[0]}}</a>
   {% endfor %}
 </div>
 {% endif %}
