push v 0.2.0, see changelog

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p>Fundamental was built with &hearts; by <a href="http://theomjones.com">Theo</a>. For everyone.</p>
+    <p>{{site.footer.content}}{% if site.footer.year == true %} {{site.footer.separator}} {{ 'now' | date: '%Y' }}{% endif %}</p>
 </footer>
