--- a/_layouts/site-archive.html
+++ b/_layouts/site-archive.html
@@ -5,7 +5,7 @@ layout: default
 <h1>All Posts</h1>
 <ul>
   {% for post in site.posts %}
-    <li><a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a>
+    <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a>
       <span> - {{ post.date | date_to_string }}</span>
     </li>
   {% endfor %}
