--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -1,3 +1,7 @@
+html {
+  display: flex; //IE 11 Fix for sticky footer
+  flex-direction: column;
+}
 body {
   font-family: $font;
   font-size: 1.2rem;
