--- a/_layouts/site-archive.html
+++ b/_layouts/site-archive.html
@@ -3,10 +3,14 @@ layout: default
 ---
 
 <h1>All Posts</h1>
-<ul>
-  {% for post in site.posts %}
-    <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a>
-      <span> - {{ post.date | date_to_string }}</span>
-    </li>
-  {% endfor %}
-</ul>
+{% for post in site.posts %}
+  {% assign currentdate = post.date | date: "%Y" %}
+  {% if currentdate != date %}
+    {% unless forloop.first %}</ul>{% endunless %}
+    <h3 id="y{{post.date | date: "%Y"}}">{{ currentdate }}</h3>
+    <ul>
+    {% assign date = currentdate %}
+  {% endif %}
+    <li><a href="{{ post.url }}">{{ post.title }}</a><span class="post-date"> - {{ post.date | date: "%b %-d, %Y" }}</span></li>
+  {% if forloop.last %}</ul>{% endif %}
+{% endfor %}
