--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,12 @@ layout: default
 ---
 
 {% include breadcrumbs.html %}
-<h1>{{ page.title }}</h1>
-{% include info.html %}
-{{ content }}
-
+<article>
+  <h1>{{ page.title }}</h1>
+  {% include info.html %}
+  {{ content }}
+  {% include share.html %}
+</article>
 <div class="post-navigation">
   {% if page.previous.url %}
     <a class="prev" href="{{ page.previous.url | relative_url }}">&laquo; {{page.previous.title}}</a>
