--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,3 +17,5 @@ layout: default
     <a class="next" href="{{page.next.url | relative_url }}">{{page.next.title}} &raquo;</a>
   {% endif %}
 </div>
+
+{% include comments.html %}
