--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
       {{ content }}
     </div>
   </main>
+    {% if site.bio.enabled %}
+      {% include bio.html %}
+    {% endif %}
   {% include footer.html %}
 </body>
 </html>
