--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,6 @@
     <link rel="icon" href="{{site.baseurl}}/favicon.ico" type="image/x-icon">
   {% endif %}
   {% seo %}
+  
+  {% include header-style.html %}
 </head>
