--- a/assets/main.scss
+++ b/assets/main.scss
@@ -17,3 +17,48 @@
 //Pages
 @import "blog";
 @import 'post';
+
+//Dynamic header media query
+
+{% assign i = 0 %}
+{% for pg in site.pages %}
+  {% if pg.menu == true %}
+    {% assign i = i | plus: 1 %}
+  {% endif %}
+{% endfor %}
+
+{% assign i = i | times: 70 | plus: 420 %}
+
+@media screen and (max-width: {{i}}px){
+header {
+    justify-content: flex-start;
+    margin-bottom: -20px;
+}
+nav {
+    overflow-y: hidden;
+    overflow-x: auto;
+    max-height: 50px;
+    -webkit-overflow-scrolling: touch;
+    border-bottom: 2px solid {{site.socialBtnsColor}};
+    width: 100%;
+}
+nav a {
+    text-decoration: none;
+}
+nav ul {
+    margin-right: 0;
+    overflow-x: auto;
+    margin: 10px 0 0 40px;
+    display: flex;
+    overflow-x: auto;
+    padding-bottom: 30px;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+header .title {
+    margin-left: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 120%;
+}
+}
