--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -1,5 +1,5 @@
 html {
-  display: flex; //IE 11 Fix for sticky footer
+  display: flex; //IE 11 Fix for sticky footer but doesn't work..
   flex-direction: column;
   overflow-x: hidden;
 }
